syntax = "proto3";

// TODO: add protobuf linter and dependency manager, change the Product message field
// ref: https://medium.com/stackpulse/grpc-in-practice-directory-structure-linting-and-more-d4d438ac4f86
package bookstore;

import "google/protobuf/timestamp.proto";

/* set where the generate Go code will be placed */
option go_package = "domain";

// ---------------Product Catalog---------------------------------------------------

// ProductService definition to handle our products.
service ProductService {
  rpc AddProduct (AddProductRequest) returns (AddProductResponse);
}

message Product {
  // @inject_tag: gorm:"primaryKey"
  uint64 id = 1;
  // @inject_tag: gorm:"unique;not null"
  string uuid = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  string slug = 6;
  bool inactive = 7;
  uint64 quantity = 8;
  string image_url = 9;

  // We need to have an array of categories that can be used to search a product
  // @inject_tag: `gorm:"many2many:product_categories;"`
  repeated Category categories = 10;

  // @inject_tag: gorm:"type:timestamp"
  Timestamp created_at = 11;
  // @inject_tag: gorm:"type:timestamp"
  Timestamp updated_at = 12;
  // @inject_tag: gorm:"type:timestamp"
  Timestamp deleted_at = 13;
}

message Category {
  // @inject_tag: gorm:"primaryKey"
  uint64 id = 1;
  string name = 2;
}

message Timestamp {
  google.protobuf.Timestamp timestamp = 1;
}

message AddProductRequest {
  Product product = 1;
}

message AddProductResponse {
  Product created_product = 1;
}

